tests/ui/traits/const-traits/tilde-twice.stderr
error: expected identifier, found `]`
  --> $DIR/tilde-twice.rs:5:27
   |
LL | struct S<T: [const] [const] Tr>;
   |                           ^ expected identifier

error: aborting due to 1 previous error

